updated few code files

--- a/Hands-on Programs/Static Website/CoffeShop.html
+++ b/Hands-on Programs/Static Website/CoffeShop.html
@@ -31,7 +31,7 @@
     <div id="hm">
         <h1>Welcome</h1>
         <p>Freshly Roasted beans, friendly faces, cozy moments, Open Every day</p>
-        <img src="C:\Users\VIBIN\Vibin Projects\coffe.jpg" alt="Coffee Shop" width="600" height="300">
+        <img src="coffe.jpg" alt="Coffee Shop" width="600" height="300">
     </div>
     <div id="mn">
         <h1>Our Menu</h1>
